[tool.poetry]
name = "cosmic_crypto_webservice"
version = "0.1.0"
description = ""
authors = ["Yehya Usman <yehya.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
redis = "^3.5.3"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


